<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".view.UserCreateActivity">

    <TextView
        android:id="@+id/titulo_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Novo usuário"
        android:textSize="28dp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/nome_cadastro"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:hint="@string/hint_input_nome_cadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo_cadastro"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/cpf_cadastro"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:hint="CPF"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nome_cadastro"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/dob_cadastro"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:focusable="false"
        android:inputType="date"
        android:hint="Data de Nascimento"
        app:layout_constraintTop_toBottomOf="@id/cpf_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"/>



    <EditText
        android:id="@+id/email_cadastro"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:hint="@string/hint_input_email"
        app:layout_constraintTop_toBottomOf="@id/dob_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/senha_cadastro"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:hint="@string/hint_input_senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_cadastro"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/confirmar_senha_cadastro"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:hint="@string/hint_input_confirmar_senha_cadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/senha_cadastro"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        />



    <Button
        android:id="@+id/botao_cadastro"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/text_button_cadastar"
        android:backgroundTint="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmar_senha_cadastro"
        android:layout_marginTop="30dp" />




</androidx.constraintlayout.widget.ConstraintLayout>