<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <TextView
        android:id="@+id/titulo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_login"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_input_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo_login"
        tools:ignore="Autofill,TextContrastCheck" />

    <EditText
        android:id="@+id/senha_login"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_input_senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_login"
        tools:ignore="Autofill,TextContrastCheck" />

    <Button
        android:id="@+id/botao_login"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/text_button_entrar"
        android:textColor="@color/white"
        android:backgroundTint="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/senha_login"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/novo_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sou novo usuário"
        android:textColor="@color/primary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/botao_login"
        android:layout_marginTop="30dp"/>


    <TextView
        android:id="@+id/language_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="en-US"
        android:textStyle="bold"
        android:textColor="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/novo_usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>